# cytosim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CYTHOSIM.md  PYCYTOSIM.md  README.md  cythoplay_callbacks.ipynb  cythosim_construct.ipynb  cythosim_extend.ipynb  cythosim_import3D.ipynb  cythosim_meca.ipynb  cythosim_obj_3D.ipynb  cythosim_objects.ipynb  demo_cythosim.ipynb  demo_frame.ipynb  demo_pytosim.ipynb  example.cym  makefile  makefile.inc  pycytoplay_callbacks.ipynb  pycytosim_obj_3D.ipynb  pycytosim_objects.ipynb
Pull_from_ends/: config.cym  force.txt  output.txt  output_01.txt  play  report  sim  tension.txt
Push_from_ends/: config.cym  force.txt  output.txt  play  report  sim  tension.txt
blobmotorquantity_5/: config.cym  output.txt
config_randomizer/: config.cym  configtemplate.txt  randomizer.py
cym/: actin.cym  amplify.cym  arp23.cym  ashbya.cym  aster.cym  aster_constrained.cym  aster_couple.cym  aster_custom.cym  aster_dynamic.cym  aster_france.cym  aster_guided.cym  aster_pull.cym  aster_pull3D.cym  aster_texas.cym  aster_tracker.cym  avoid.cym  axon.cym  axon.txt  baseball.cym  bead.cym  bead_flux.cym  beat.cym  bipolar.cym  buckling.cym  buckling.cym.tpl  capture.cym  capture_amplified.cym  catastrophe_outside.cym  celegans.cym  change.cym  change_confine.cym  change_space.cym  confine_instability.cym  contract.cym  contract_always.cym  contract_anchored.cym  contract_clamped.cym  contract_connect.cym  contract_periodic.cym  cortex.cym  (+184 more)
cythosim/: glossary_modules.h
cytosim.xcodeproj/: project.pbxproj
doc/: index.md
examples/: flock.cym  pycytoplay_callbacks.ipynb  pycytosim_construct.ipynb  pycytosim_extend.ipynb  pycytosim_flock.ipynb  pycytosim_import3D.ipynb  pycytosim_meca.ipynb  pycytosim_obj_3D.ipynb  pycytosim_objects.ipynb
fix_bt_test/: output.txt
fixed_anchors/: config.cym  fixed_anchors.cym
fixed_anchors_05/: config.cym  fibernum.txt  output.txt
fixed_anchors_1/: config.cym  fibernum.txt  fixedfibernum.txt  output.txt
fixed_anchors_10/: config.cym  fibernum.txt  output.txt  sim
fixed_anchors_20/: config.cym  fibernum.txt  output.txt
fixed_anchors_5/: config.cym  fibernum.txt  output.txt
moving_anchors/: config.cym  fibernum.txt  output.txt  play  report
moving_anchors_05/: config.cym  fibernum.txt  output.txt  play  sim
moving_anchors_1/: fibernum.txt  forces.txt  output.txt
moving_anchors_10/: config.cym  fibernum.txt  output.txt
moving_anchors_20/: config.cym  fibernum.txt  movingfibernum.txt  output.txt
moving_anchors_5/: config.cym  fibernum.txt  output.txt
pseudorandom/: config.cym  output.txt  sim
python/: index.md
src/: CMakeLists.txt  index.md
src/base/: CMakeLists.txt  ansi_colors.cc  ansi_colors.h  array.h  assert_macro.h  backtrace.cc  backtrace.h  buddy.h  exceptions.cc  exceptions.h  filepath.cc  filepath.h  filewrapper.cc  filewrapper.h  glossary.cc  glossary.h  inventoried.cc  inventoried.h  inventory.cc  inventory.h  iowrapper.cc  iowrapper.h  makefile.inc  messages.cc  messages.h  node.cc  node.h  node_list.cc  node_list.h  operator_new.cc  print_color.cc  print_color.h  property.cc  property.h  property_list.cc  property_list.h  stream_func.cc  stream_func.h  tictoc.cc  tictoc.h  (+3 more)
src/disp/: CMakeLists.txt  fiber_disp.cc  fiber_disp.h  glapp.cc  glapp.h  gle.cc  gle.h  gle_color.cc  gle_color.h  gle_color_list.cc  gle_color_list.h  glu_unproject.cc  grid_display.cc  grid_display.h  makefile.inc  offscreen.cc  offscreen.h  offscreen_fbo.cc  offscreen_glx.cc  opengl.h  point_disp.cc  point_disp.h  save_image.cc  save_image.h  saveimage.cc  saveimage.h  spng.c  spng.h  view.cc  view.h  view_prop.cc  view_prop.h
src/math/: CMakeLists.txt  SFMT-avx2.h  SFMT-params.h  SFMT-sse2.h  SFMT.c  SFMT.h  accumulator.h  allocator.h  bicgstab.h  cblas.h  clapack.h  dgtsv.c  dim.h  evaluator.cc  evaluator.h  gmres.h  grid.cc  grid.h  grid_base.cc  grid_base.h  isometry.h  linear_operator.h  makefile.inc  matblock.cc  matblock.h  matrix.cc  matrix.h  matrix11.cc  matrix11.h  matrix22.cc  matrix22.h  matrix33.cc  matrix33.h  matrix44.h  matrixbase.h  matsparse.cc  matsparse.h  matsparsesym.cc  matsparsesym.h  matsparsesym1.cc  (+39 more)
src/sim/spaces/: CMakeLists.txt  makefile.inc  space_banana.cc  space_banana.h  space_capsule.cc  space_capsule.h  space_cylinder.cc  space_cylinder.h  space_cylinderP.cc  space_cylinderP.h  space_cylinderZ.cc  space_cylinderZ.h  space_dice.cc  space_dice.h  space_disc.cc  space_disc.h  space_dynamic_ellipse.cc  space_dynamic_ellipse.h  space_dynamic_ellipse_prop.cc  space_dynamic_ellipse_prop.h  space_ellipse.cc  space_ellipse.h  space_force.cc  space_force.h  space_periodic.cc  space_periodic.h  space_polygon.cc  space_polygon.h  space_polygonZ.cc  space_polygonZ.h  space_ring.cc  space_ring.h  space_sphere.cc  space_sphere.h  space_sphereCrown.cc  space_sphereCrown.h  space_square.cc  space_square.h  space_squareOffset.cc  space_squareOffset.h  (+4 more)
src/test/: CMakeLists.txt  makefile.inc  test.cc  test_blas.cc  test_code.cc  test_cxx.cc  test_dispatch.cc  test_gillespie.cc  test_glapp.cc  test_glos.cc  test_glut.cc  test_glut3D.cc  test_grid.cc  test_math.cc  test_matrix.cc  test_omp.cc  test_opengl.cc  test_pipe.cc  test_platonic.cc  test_quaternion.cc  test_random.cc  test_rasterizer.cc  test_signal.cc  test_simd.cc  test_sizeof.cc  test_solve.cc  test_space.cc  test_sphere.cc  test_string.cc  test_thread.cc  test_vbo.cc
src/tools/: CMakeLists.txt  couple_modules.h  cymart.cc  cythoplay.cc  cythosim.cc  cythosim.h  fiber_modules.h  frametool.cc  hand_modules.h  makefile.inc  object_info.h  object_modules.h  organizer_modules.h  property_modules.h  pycytoplay.cc  pycytosim.cc  python_frame.cc  python_frame.h  python_utilities.h  reader.cc  report.cc  reportF.cc  report_python.cc  report_python.h  sieve.cc  simul_modules.h  single_modules.h  solid_modules.h  space_modules.h
template_generate/: config.cym  configtemplate.txt  template_generate.py
tension_pull/: config.cym  output.txt  play  report  sim
test/: config.cym  force.txt  output.txt  play  report  sim  tension.txt
(+483 files in other folders)
